...
    }

    @available(*, unavailable) required init?(coder: NSCoder) { fatalError() }

    private lazy var dismissButton = UIButton(
        configuration: .filled().with {
            $0.title = "Dismiss Sheet"
            $0.cornerStyle = .capsule
            $0.image = UIImage(systemName: "chevron.down.circle.fill")
            $0.imagePadding = 6
        }
    )
    .onTap { [weak self] in self?.onRequested(.dismiss) }
...
